Bug 77174 - Sidebar: crash with "New style from selection" with List styles
Summary: Sidebar: crash with "New style from selection" with List styles
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.4.2 release
Hardware: Other All
: medium critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.2.4
Keywords: regression
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2014-04-08 09:31 UTC by Laurent Balland
Modified: 2014-05-28 09:39 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent Balland 2014-04-08 09:31:13 UTC
Problem description:
Crash when creating a custom list style with "New style from selection" in Sidebar, with an empty paragraph (without bullets)

Steps to reproduce:
1. Create a new Writer document
2. Open stylist in Sidebar (no crash with "classic" stylist)
3. Select List Styles
4. Select "New style from selection" with last button
5. Enter a name
6. OK

Current behavior:
Crash

Expected behavior:
No crash

Reproduce with:
- Version: 4.2.4.0.0+
Build ID: c1a756df130082ba25ba40c67293eab5fe15bd5b
TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-04-04_19:22:58
- Version: 4.2.1.0.0+
Build ID: 63950ec72806489b41c2109f5c3840dcf22f4c6c
- Version: 4.1.5.3
Build ID: 1c1366bba2ba2b554cd2ca4d87c06da81c05d24
- Version: 4.1.0.0.beta1
Build ID: 5271b34bec742e190e2fe5a7dadb7334a705b54
- AOO 4.0.1 

NOT reproduce with:
- Version: 4.3.0.0.alpha0+
Build ID: 003a27a14d5cf65fe0b528b6d6015e37a64dbb8e
TinderBox: Win-x86@39, Branch:master, Time: 2014-03-26_02:40:16 

Crash does not occur with "classic" (not Sidebar) stylist because if there is no bullet, command (in step 4.) is unavailable, which is correct.

Crash occurs because there is no bullet, so there is no List style to create.

With LibO 4.3.0.0, the command is available, but the created list style is hidden. Select another style type and come back to List Styles. Created list style contains numbering bullets.

From my point of view, the "classic" stylist has correct behavior: command should be unavailable if no bullet/numbering is selected.
Comment 2 Kevin Suo 2014-04-08 09:44:17 UTC
Reproduced with LibreOffice 4.2.3.1, windows XP X86.

With "sidebar" styles window, "New style from selection" for List Styles is not grayed out. When enter a name and press ok, crash.

With the classic F11 style window, "New style from selection" for List Styles is grayed out so no option to enter a name.
Comment 3 Pierre C 2014-04-08 16:36:58 UTC
Reproduced with LO 4.2.3.3 / 7 x64
Comment 4 Julien Nabet 2014-04-08 20:37:41 UTC
On pc Debian x86-64 with master sources updated yesterday, I don't reproduce this.
However, I noticed this trace on console:
warn:legacy.osl:31476:1:sw/source/core/txtnode/txtedt.cxx:714: SwScanner: EmptyString
Comment 5 Caolán McNamara 2014-04-09 11:04:54 UTC
probably fixed on master by a434a8bfdd8b9323c8262edcd591641fe9ea8b19 "coverity#1130423 Dereference null return value"
Comment 6 Caolán McNamara 2014-04-09 11:13:37 UTC
yup, that's it, review for 4-2 at https://gerrit.libreoffice.org/8905 now
Comment 7 Commit Notification 2014-04-09 11:48:02 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=609e949bfe407487f417fadb377ead3a3a9cfa5c&h=libreoffice-4-2

Resolves: fdo#77174 crash with "New style from selection" with List


It will be available in LibreOffice 4.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Laurent Balland 2014-04-09 20:48:38 UTC
Verified with Version: 4.2.4.0.0+
Build ID: 351ab7b879a1e5bf879600bf47909181029a4d11
TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-04-09_13:06:38
Comment 9 famo 2014-05-28 08:46:42 UTC
I still (or again?) have this issue in LO 4.2.4.2 Impress.

LO Impress hogs 100% CPU and hangs forever on creating a new style.

How to reproduce:
1. Start LO Impress (New Presentation)
2. On the right choose Stylist
3. Right click on Titel and choose New...
=> LO hangs

Reproducible always.

I tested on Win7 and Linux both 64-bit.
Comment 10 Kevin Suo 2014-05-28 09:15:41 UTC
(In reply to comment #9)

I reproduce your steps in Impress, libreoffice 4.2.4.2. My steps:
1. New Impress;
2. Enable sidebar, Styles and Formatting;
3. Right click "Title", New.

Current Behaviour: Impress crashes.

I also tested in 4.3.0 beta 1, the wired thing is that: at step 3, there is no crash, but the create new style window do not pop up (no reaction).
Comment 11 Kevin Suo 2014-05-28 09:26:22 UTC
(In reply to comment #9)

Although I can reproduce you steps, this bug is about "New style from selection", but the reason to reopen this bug is "Create new", they are different issues.

So please file a new bug report, add this bug as see also.

I will file another bug regarding the "create new" no response for 4.3.0 beta1.

Thanks