Resolves: fdo#77174 crash with "New style from selection" with List

was coverity#1130423 Dereference null return value

(cherry picked from commit a434a8bfdd8b9323c8262edcd591641fe9ea8b19)

Change-Id: If6981a9654a114e34dad931381ea071d5169adc2
Reviewed-on: https://gerrit.libreoffice.org/8905
Tested-by: Michael Stahl <mstahl@redhat.com>
Reviewed-by: Michael Stahl <mstahl@redhat.com>